--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "figures": "^3.1.0",
     "find-up": "^5.0.0",
     "git-semver-tags": "^4.0.0",
+    "glob": "^11.0.3",
     "semver": "^7.1.1",
     "stringify-package": "^1.0.1",
     "yargs": "^16.0.0"
